syntax = "proto3";
option csharp_namespace = "Atlantis.Simple";
package ;

service AtlantisService {

	rpc Hello(HelloMessage) returns(HelloMessageResult);

}

message HelloMessage {
	string Name = 1;
}


message HelloMessageResult {
	string Result = 1;
}


